--- a/index.html
+++ b/index.html
@@ -15,13 +15,12 @@
     <script>
         let output = document.getElementById("output");
         for (let i = 1; i < 101; i++) {
-            let result;
+            let result = "";
             let fizz = 3;
             let buzz = 5;
-            if (i % fizz == 0) result = 'fizz';
-            else if (i % buzz == 0) result = "buzz";
-            else if (i % (fizz + buzz) == 0) result = 'fizzbuzz';
-            else result = i;
+            if (i % fizz == 0) result += 'Fizz';
+            if (i % buzz == 0) result += "Buzz";
+            if (result == "") result = i;
             output.innerHTML += result + '<br>';
         }
     </script>
